--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,6 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".Actividades.ProfileActivity">
 
+    <TextView
+        android:id="@+id/profileUser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/profileMail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toTopOf="@id/profileUser" />
+    <TextView
+        android:id="@+id/profilePreferences"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toTopOf="@id/profileMail" />
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnDeleteAccount"
         style="@style/Widget.MaterialComponents.Button.TextButton"
@@ -16,6 +35,6 @@
         android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/profilePreferences" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
