--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -19,14 +19,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/avatars" />
+
         <TextView
             android:id="@+id/itemName"
             android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="190dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="210dp"
             android:gravity="center"
-            android:textSize="15sp"
-            android:text="Nombre de la bebida" />
+            android:textSize="15sp" />
     </com.google.android.material.card.MaterialCardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
