--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -3,29 +3,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="325dp">
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="15dp">
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/itemImage"
-            android:layout_width="150dp"
-            android:layout_height="200dp"
+            android:layout_width="180dp"
+            android:layout_height="210dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="30dp"
             android:src="@drawable/boozer_logo"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@tools:sample/avatars" />
+            tools:srcCompat="@tools:sample/avatars"/>
 
         <TextView
             android:id="@+id/itemName"
-            android:layout_width="150dp"
+            android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:layout_marginTop="210dp"
-            android:gravity="center"
+            android:layout_marginTop="240dp"
+            android:textStyle="bold"
+            android:gravity="center_horizontal"
             android:textSize="15sp" />
     </com.google.android.material.card.MaterialCardView>
 
