--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#D81B60</color>
     <color name="darkBackground">#3F3F3F</color>
     <color name="darkNavBar">#242424</color>
-    <color name="white">#ffffff</color>
+    <color name="white">#FFFFFF</color>
 
 
 </resources>
