--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="darkBackground">#3F3F3F</color>
     <color name="darkNavBar">#242424</color>
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 
 
 </resources>
