--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#242424</color>
     <color name="colorPrimaryDark">#4E0000</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#A83F3F</color>
     <color name="darkBackground">#3F3F3F</color>
     <color name="darkNavBar">#242424</color>
     <color name="white">#FFFFFF</color>
