--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,10 +6,9 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:navigationBarColor">@color/darkNavBar</item>
+        <item name="android:navigationBarColor">@color/colorPrimary</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:backgroundTint">@color/darkNavBar</item>
-
+        <item name="android:backgroundTint">@color/colorPrimary</item>
         <item name="boxStrokeColor">#fff</item>
         <item name="boxStrokeWidth">2dp</item>
     </style>
@@ -17,12 +16,11 @@
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimary">@color/colorAccent</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:navigationBarColor">@color/darkNavBar</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:backgroundTint">@color/darkNavBar</item>
+        <item name="android:backgroundTint">@color/colorPrimary</item>
     </style>
 
     <style name="DialogTheme" parent="Theme.MaterialComponents.Dialog.Alert">
