--- a/app/src/main/res/layout/fragment_catalogue.xml
+++ b/app/src/main/res/layout/fragment_catalogue.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragmentos.CatalogueFragment">
+    tools:context=".Fragmentos.CatalogueFragment"
+    android:scrollbarThumbVertical="@color/colorPrimaryDark">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/drinksCatalogue"
