--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="colorPrimary">#242424</color>
     <color name="colorPrimaryDark">#4E0000</color>
     <color name="colorAccent">#A83F3F</color>
@@ -7,6 +7,7 @@
     <color name="darkNavBar">#242424</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
+    <color name="mtrl_textinput_default_box_stroke_color" tools:ignore="PrivateResource">#242424</color>
 
 
 </resources>
