--- a/Boozer-Admin (React)/src/containers/Home/Home.scss
+++ b/Boozer-Admin (React)/src/containers/Home/Home.scss
@@ -19,6 +19,9 @@
     border-radius: 3vh 8vh 5vh 5vh;
     overflow: hidden;
   }
+  ul li:hover #edit, ul li:hover #delete {
+    opacity: 1;
+  }
   ul li h4 {
     max-height: 3vw;
     font-size: 2vw;
@@ -29,15 +32,16 @@
     display: inline-block;
     height: 4vw;
     border-top: 2px solid black;
-    transition: all linear .15s;
+    opacity: 0;
+    transition: opacity linear .15s;
   }
   //Transitions for icons
   #edit svg, #delete svg {
     transition: transform linear .15s;
   }
   #edit {
+    color: #f2f530;
     border-right: 2px solid black;
-    transition: linear .15s;
   }
   #edit:hover {
     background-color: rgba(255, 255, 0, .25);
@@ -45,24 +49,19 @@
   #edit:hover svg {
     transform: rotate(-15deg);
   }
+  #delete {
+    color: #d62121;
+    cursor: pointer;
+  }
   #delete:hover {
     background-color: rgba(255, 0, 0, 0.25);
   }
   #delete:hover svg {
     transform: scaleY(1.15);
   }
-  //
-
   svg {
     font-size: 2vw;
     margin: 1vw 0;
-  }
-  #edit {
-    color: #f2f530;
-  }
-  #delete {
-    color: #d62121;
-    cursor: pointer;
   }
   .btn-outline-success {
     color: rgb(35, 143, 35);
